--- a/houses.html
+++ b/houses.html
@@ -31,5 +31,51 @@
         </button>
       </div>
     </nav>
+    <nav class="nav-search">
+      <div class="input-group mb-3 location-button">
+        <label class="input-group-text" for="inputGroupSelect01"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-geo-alt-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+            /></svg
+        ></label>
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected value="0">Any Location</option>
+          <option value="1">Koh Phangan</option>
+          <option value="2">Kah Samui</option>
+          <option value="3">Bali</option>
+        </select>
+      </div>
+      <div class="input-group mb-3 rooms-button">
+        <label class="input-group-text" for="inputGroupSelect01"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-house-door-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"
+            /></svg
+        ></label>
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected value="0">Any Rooms</option>
+          <option value="1">1 Room</option>
+          <option value="2">2 Rooms</option>
+          <option value="3">3 Rooms</option>
+          <option value="4">4 Rooms</option>
+          <option value="5">5 Rooms</option>
+        </select>
+      </div>
+    </nav>
   </body>
 </html>
