Finish Search Nav

--- a/houses.html
+++ b/houses.html
@@ -98,6 +98,41 @@
         />
         <label class="form-label" for="typeNumber"></label>
       </div>
+      <div class="input-group mb-3 price-sort-button">
+        <label class="input-group-text" for="inputGroupSelect01"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-house-door-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"
+            /></svg
+        ></label>
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected value="0">Price (Low to High)</option>
+          <option value="1">1 Room</option>
+        </select>
+      </div>
+      <div class="nav-house-search">
+        <form class="d-flex">
+          <input
+            class="form-control me-2 nav-house-search"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-success nav-house-search"
+            type="submit"
+          >
+            Search
+          </button>
+        </form>
+      </div>
     </nav>
   </body>
 </html>
