--- a/houses.html
+++ b/houses.html
@@ -114,7 +114,7 @@
         ></label>
         <select class="form-select" id="inputGroupSelect01">
           <option selected value="0">Price (Low to High)</option>
-          <option value="1">1 Room</option>
+          <option value="1">Price (high to Low)</option>
         </select>
       </div>
       <div class="nav-house-search">
@@ -142,20 +142,15 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link card-location">Chaweng</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Koh Phangan</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -165,96 +160,87 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link card-location">Koh Phangan</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Koh Phangan</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2003/house_03_01.png"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link card-location">Chaweng</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Chaweng</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2004/house_04_01.png"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link card-location">Chaweng</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Chaweng</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2005/house_05_01.png"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
+          <a href="#" class="card-link card-location">Koh Phangan</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Koh Phangan</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2006/house_06_01.png"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link card-location">Koh Phangan</a>
+          <span>• 4 Rooms</span>
+          <h5 class="card-title">Kyles place in Koh Phangan</h5>
+          <div class="card-location-wrapper1">
+            <a href="#" class="card-link card-reviews card-location"
+              >4 Reviews</a
+            >
+            <span>$450/night</span>
+          </div>
         </div>
       </div>
     </section>
