--- a/house.html
+++ b/house.html
@@ -3,6 +3,42 @@
   <head>
     <meta charset="utf-8" />
     <title>House Name</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
+    <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="top-nav">
+      <div class="nav-logo">
+        <img src="./images/logo-airbnb.png" alt="" />
+      </div>
+      <div class="nav-buttons">
+        <button type="button" class="btn btn-outline-secondary profile-button">
+          <img
+            src="https://avatars.githubusercontent.com/u/19708712?v=4"
+            alt=""
+            class="profile-button"
+          />
+          Kyle Kent
+        </button>
+        <button type="button" class="btn btn-outline-secondary logout-button">
+          Logout
+        </button>
+      </div>
+    </nav>
+    <section class="house-photos">
+      <div class="house-main-photo">
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+          alt=""
+        />
+      </div>
+      <div class="house-other-photos"></div>
+    </section>
+  </body>
 </html>
