--- a/house.html
+++ b/house.html
@@ -31,5 +31,40 @@
         </button>
       </div>
     </nav>
+    <section class="house-page">
+      <div class="container house-photos">
+        <div class="row">
+          <div class="col">
+            Column
+          </div>
+          <div class="col">
+            <div class="row">
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            Column
+          </div>
+          <div class="col">
+            Column
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            Column
+          </div>
+          <div class="col">
+            Column
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
