--- a/house.html
+++ b/house.html
@@ -32,36 +32,28 @@
       </div>
     </nav>
     <section class="house-page">
-      <div class="container house-photos">
+      <div class="container">
         <div class="row">
+          <div class="col">
+            <picture>
+              <source srcset="..." type="image/svg+xml" />
+              <img
+                src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+                class="img-fluid img-thumbnail"
+                alt="..."
+              />
+            </picture>
+          </div>
           <div class="col">
             Column
           </div>
-          <div class="col">
-            <div class="row">
-              <div class="col">
-                Column
-              </div>
-              <div class="col">
-                Column
-              </div>
+          <div class="row">
+            <div class="col">
+              Column
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            Column
-          </div>
-          <div class="col">
-            Column
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            Column
-          </div>
-          <div class="col">
-            Column
+            <div class="col">
+              Column
+            </div>
           </div>
         </div>
       </div>
