--- a/login.html
+++ b/login.html
@@ -12,32 +12,35 @@
     <link rel="stylesheet" href="./styles/bootstrap.css" />
   </head>
   <body>
-    <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-        />
-        <div id="emailHelp" class="form-text">
-          We'll never share your email with anyone else.
+    <div class="card login-card" style="width: 18rem;">
+      <div class="card-body">
+        <img src="./images/logo-airbnb.png" alt="" />
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+          />
         </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label"
+            >Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="exampleFormControlInput2"
+          />
+        </div>
+        <div class="">
+          <button type="button" class="btn btn-success">Login</button>
+        </div>
+        <span>New to airbnb?</span>
+        <a href="#" class="card-link">Sign Up</a>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-        />
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
   </body>
 </html>
