--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,65 @@
   <head>
     <meta charset="utf-8" />
     <title>Signup</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="card signup-card" style="width: 40rem;">
+      <div class="card-body">
+        <img src="./images/logo-airbnb.png" alt="" />
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Full Name</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="exampleFormControlInput1"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label"
+            >Profile Picture</label
+          >
+          <input
+            type=" url"
+            class="form-control"
+            id="exampleFormControlInput2"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput3" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput3"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label"
+            >Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="exampleFormControlInput2"
+          />
+        </div>
+        <div class="">
+          <button type="button" class="btn btn-success">Signup</button>
+        </div>
+        <span>Already have an account?</span>
+        <a href="#" class="card-link">Login</a>
+      </div>
+    </div>
+  </body>
 </html>
