--- a/profile.html
+++ b/profile.html
@@ -31,5 +31,66 @@
         </button>
       </div>
     </nav>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h1>Profile</h1>
+          <div class="card signup-card" style="width: 20rem;">
+            <div class="card-body">
+              <img src="./images/logo-airbnb.png" alt="" />
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Full Name</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput2" class="form-label"
+                  >Profile Picture</label
+                >
+                <input
+                  type=" url"
+                  class="form-control"
+                  id="exampleFormControlInput2"
+                  placeholder="http://..."
+                />
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput3" class="form-label"
+                  >Email address</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleFormControlInput3"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput2" class="form-label"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="exampleFormControlInput2"
+                />
+              </div>
+              <div class="">
+                <button type="button" class="btn btn-success">Signup</button>
+              </div>
+              <span>Already have an account?</span>
+              <a href="#" class="card-link">Login</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <h1>My Listings</h1>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
