--- a/house.html
+++ b/house.html
@@ -31,32 +31,86 @@
         </button>
       </div>
     </nav>
-    <section class="house-page">
-      <div class="container">
+    <!-- *** HOUSE PHOTOS START*** -->
+    <div class="house-photos">
+      <div class="container text-center py-4">
         <div class="row">
           <div class="col">
-            <picture>
-              <source srcset="..." type="image/svg+xml" />
-              <img
-                src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
-                class="img-fluid img-thumbnail"
-                alt="..."
-              />
-            </picture>
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+"
+              class="img-fluid"
+            />
           </div>
           <div class="col">
-            Column
-          </div>
-          <div class="row">
-            <div class="col">
-              Column
-            </div>
-            <div class="col">
-              Column
+            <div class="container text-center">
+              <div class="row row-cols-3 gy-4">
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+		"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col">
+                  <img
+                    src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png
+
+	"
+                    class="img-fluid"
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+    <!-- *** HOUSE PHOTOS END*** -->
+    <!-- *** HOUSE INFO START *** -->
+
+    <!-- *** HOUSE INFO END *** -->
   </body>
 </html>
