Add structure to house

--- a/house.html
+++ b/house.html
@@ -110,7 +110,51 @@
     </div>
     <!-- *** HOUSE PHOTOS END*** -->
     <!-- *** HOUSE INFO START *** -->
-
+    <div>
+      <div class="container text-center">
+        <div class="row">
+          <!-- *** LEFT SIDE START*** -->
+          <div class="col-8">
+            <h2>Luxury Villa in Chaweng</h2>
+            <a href="#" class="card-link card-location">Chaweng</a>
+            <span>• 4 Rooms</span>
+            <!-- *** HOSTED BY START *** -->
+            <div class="row">
+              <div class="col-1 p-0">
+                <div class="nav-logo">
+                  <img
+                    src="https://avatars.githubusercontent.com/u/19708712?v=4"
+                    alt=""
+                    class="profile-button"
+                  />
+                </div>
+              </div>
+              <div class="col-11 text-start px-0">
+                <span class="text-muted">Hosted By</span>
+                <div>Kyle Kent</div>
+              </div>
+            </div>
+            <!-- *** HOSTED BY END *** -->
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                penatibus et magnis dis parturient montes, nascetur ridiculus
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+                quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo,
+                rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
+                felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+              </p>
+            </div>
+          </div>
+          <!-- *** LEFT SIDE END***
+				*** RIGHT SIDE START*** -->
+          <div class="col-3 ms-5">Add Reviews</div>
+          <!-- *** RIGHT SIDE END*** -->
+        </div>
+      </div>
+    </div>
     <!-- *** HOUSE INFO END *** -->
   </body>
 </html>
