add border line

--- a/house.html
+++ b/house.html
@@ -111,7 +111,7 @@
     <!-- *** HOUSE PHOTOS END*** -->
     <!-- *** HOUSE INFO START *** -->
     <div>
-      <div class="container text-center">
+      <div class="container text-center border-top">
         <div class="row">
           <!-- *** LEFT SIDE START*** -->
           <div class="col-8">
