complete house-create form

--- a/house-create.html
+++ b/house-create.html
@@ -78,6 +78,109 @@
           </select>
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
+        <!-- *** HOUSE PRICE FORM START *** -->
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label"
+            >House Price</label
+          >
+          <div class="input-group mb-3">
+            <span class="input-group-text">$</span>
+            <input
+              type="number"
+              class="form-control"
+              aria-label="Amount (to the nearest dollar)"
+            />
+            <span class="input-group-text">.00</span>
+          </div>
+        </div>
+        <!-- *** HOUSE PRICE FORM END *** -->
+        <!-- *** ADD PHOTOS START*** -->
+        <label for="basic-url" class="form-label">Your vanity URL</label>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="url"
+            class="form-control"
+            id="basic-url"
+            aria-describedby="basic-addon3"
+            placeholder="http://..."
+          />
+        </div>
+        <!-- *** ADD PHOTOS END *** -->
+        <div class="">
+          <button type="button" class="btn btn-success">Submit</button>
+        </div>
       </form>
     </div>
     <!-- *** HOUSE LISTING END*** -->
