update house heading

--- a/house-edit.html
+++ b/house-edit.html
@@ -33,7 +33,7 @@
     </nav>
     <!-- *** HOUSE LISTING START*** -->
     <div class="container text-center p-5 m- 5">
-      <h2>List a House</h2>
+      <h2>Edit House</h2>
       <form action="" class="list-house-form text-start">
         <!-- *** LIST HOUSE FORM START *** -->
         <div class="mb-3">
