add house-edit delete button

--- a/house-edit.html
+++ b/house-edit.html
@@ -181,6 +181,11 @@
         <div class="">
           <button type="button" class="btn btn-success">Submit</button>
         </div>
+        <div class="">
+          <button type="button" class="btn btn-danger my-2">
+            Delete House
+          </button>
+        </div>
       </form>
     </div>
     <!-- *** HOUSE LISTING END*** -->
