center login form

--- a/login.html
+++ b/login.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
   </head>
   <body class="login-background">
-    <div class="card login-card" style="width: 18rem;">
+    <div
+      class="card login-card position-absolute top-50 start-50 translate-middle"
+      style="width: 18rem;"
+    >
       <div class="card-body">
         <img src="./images/logo-airbnb.png" alt="" />
         <div class="mb-3">
