apply background and center signup page form

--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles/bootstrap.css" />
+    <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
   </head>
-  <body>
-    <div class="card signup-card" style="width: 40rem;">
+  <body class="login-background">
+    <div
+      class="card signup-card position-absolute top-50 start-50 translate-middle"
+      style="width: 40rem;"
+    >
       <div class="card-body">
         <img src="./images/logo-airbnb.png" alt="" />
         <div class="mb-3">
