--- a/houses.html
+++ b/houses.html
@@ -135,7 +135,7 @@
       </div>
     </nav>
     <section class="search-page-results">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
           class="card-img-top"
@@ -153,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2002/house_02_01.png"
           class="card-img-top"
@@ -171,7 +171,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2003/house_03_01.png"
           class="card-img-top"
@@ -189,7 +189,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2004/house_04_01.png"
           class="card-img-top"
@@ -207,7 +207,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2005/house_05_01.png"
           class="card-img-top"
@@ -225,7 +225,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img
           src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2006/house_06_01.png"
           class="card-img-top"
