--- a/houses.html
+++ b/houses.html
@@ -39,109 +39,78 @@
       </div>
     </nav>
     <!-- *** MAIN NAV END *** -->
-    <nav class="nav-search">
-      <div class="input-group mb-3 location-button">
-        <label class="input-group-text" for="inputGroupSelect01"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-geo-alt-fill"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
-            /></svg
-        ></label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected value="0">Any Location</option>
-          <option value="1">Koh Phangan</option>
-          <option value="2">Kah Samui</option>
-          <option value="3">Bali</option>
-        </select>
+    <!-- *** SEARCH BAR START *** -->
+    <form>
+      <div class="container bg-light">
+        <div class="row py-3">
+          <div class="col">
+            <div class="input-group mb-3">
+              <span class="input-group-text">@</span>
+              <select
+                type="select"
+                class="form-control form-select"
+                name="location"
+              >
+                <option value="all">Any Location</option>
+                <option value="KP1">Koh Phangan</option>
+                <option value="KS1">Kah Samui</option>
+                <option value="BA1">Bali</option>
+              </select>
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <span class="input-group-text">@</span>
+              <select
+                type="select"
+                class="form-control form-select"
+                name="rooms"
+              >
+                <option value="all">Any Rooms</option>
+                <option value="1">1 Room</option>
+                <option value="2">2 Rooms</option>
+                <option value="3">3 Rooms</option>
+                <option value="4">4 Rooms</option>
+                <option value="5">5 Rooms</option>
+              </select>
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <span class="input-group-text">$</span>
+              <input
+                name="max-price"
+                type="number"
+                class="form-control"
+                placeholder="Max Price"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3 price-sort-button" name="price-sort">
+              <label class="input-group-text" for="inputGroupSelect01"></label>
+              <select class="form-select">
+                <option selected value="low">Price (Low to High)</option>
+                <option value="high">Price (high to Low)</option>
+              </select>
+            </div>
+          </div>
+          <div class="col">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              name="search-bar"
+            />
+          </div>
+          <div class="col">
+            <button class="btn btn-success">Search</button>
+          </div>
+        </div>
       </div>
-      <div class="input-group mb-3 rooms-button">
-        <label class="input-group-text" for="inputGroupSelect01"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-house-door-fill"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"
-            /></svg
-        ></label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected value="0">Any Rooms</option>
-          <option value="1">1 Room</option>
-          <option value="2">2 Rooms</option>
-          <option value="3">3 Rooms</option>
-          <option value="4">4 Rooms</option>
-          <option value="5">5 Rooms</option>
-        </select>
-      </div>
-      <div class="input-group mb-3 max-price-button">
-        <label class="input-group-text" for="inputGroupSelect01"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-currency-dollar"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"
-            /></svg
-        ></label>
-        <input
-          type="number"
-          id="typeNumber"
-          class="form-control"
-          placeholder="Max Price"
-        />
-        <label class="form-label" for="typeNumber"></label>
-      </div>
-      <div class="input-group mb-3 price-sort-button">
-        <label class="input-group-text" for="inputGroupSelect01"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-house-door-fill"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"
-            /></svg
-        ></label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected value="0">Price (Low to High)</option>
-          <option value="1">Price (high to Low)</option>
-        </select>
-      </div>
-      <div class="nav-house-search">
-        <form class="d-flex">
-          <input
-            class="form-control me-2 nav-house-search"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button
-            class="btn btn-outline-success nav-house-search"
-            type="submit"
-          >
-            Search
-          </button>
-        </form>
-      </div>
-    </nav>
+    </form>
+
+    <!-- *** SEARCH BAR END *** -->
     <section class="search-page-results">
       <div class="card">
         <img
