create stretched link

--- a/houses.html
+++ b/houses.html
@@ -131,6 +131,154 @@
                   >4 Reviews</span
                 >
                 <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+                <a href="#" class="stretched-link"></a>
               </div>
             </div>
           </div>
