update nav to bootstrap

--- a/house-create.html
+++ b/house-create.html
@@ -13,24 +13,32 @@
     <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
   </head>
   <body>
-    <nav class="top-nav">
-      <div class="nav-logo">
-        <img src="./images/logo-airbnb.png" alt="" />
-      </div>
-      <div class="nav-buttons">
-        <button type="button" class="btn btn-outline-secondary profile-button">
-          <img
-            src="https://avatars.githubusercontent.com/u/19708712?v=4"
-            alt=""
-            class="profile-button"
-          />
-          Kyle Kent
-        </button>
-        <button type="button" class="btn btn-outline-secondary logout-button">
-          Logout
-        </button>
+    <!-- *** MAIN NAV START *** -->
+    <nav>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-9 g-2">
+            <a class="nav-logo" href="google">
+              <img src="./images/logo-airbnb.png" alt="" />
+            </a>
+          </div>
+          <div class="col-3 g-2 align-items-end">
+            <a href="#" class="btn btn-outline-secondary profile-button">
+              <img
+                src="https://avatars.githubusercontent.com/u/19708712?v=4"
+                alt=""
+                class="profile-button"
+              />
+              Kyle Kent
+            </a>
+            <a href="#" class="btn btn-outline-secondary logout-button">
+              Logout
+            </a>
+          </div>
+        </div>
       </div>
     </nav>
+    <!-- *** MAIN NAV END *** -->
     <!-- *** HOUSE LISTING START*** -->
     <div class="container text-center p-5 m- 5">
       <h2>List a House</h2>
