--- a/login.html
+++ b/login.html
@@ -19,29 +19,23 @@
     >
       <div class="card-body">
         <img src="./images/logo-airbnb.png" alt="" />
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput2" class="form-label"
-            >Password</label
-          >
-          <input
-            type="password"
-            class="form-control"
-            id="exampleFormControlInput2"
-          />
-        </div>
-        <div class="">
-          <button type="button" class="btn btn-success">Login</button>
-        </div>
+        <form action="">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Email address</label
+            >
+            <input type="email" class="form-control" name="login-email" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput2" class="form-label"
+              >Password</label
+            >
+            <input type="password" class="form-control" name="login-password" />
+          </div>
+          <div class="">
+            <button class="btn btn-success">Login</button>
+          </div>
+        </form>
         <span>New to airbnb?</span>
         <a href="#" class="card-link">Sign Up</a>
       </div>
