add Request Booking Form

--- a/house.html
+++ b/house.html
@@ -158,7 +158,32 @@
           </div>
           <!-- *** LEFT SIDE END***
 				*** RIGHT SIDE START*** -->
-          <div class="col-3 ms-5">Add Reviews</div>
+          <!-- *** REQUEST BOOKING START *** -->
+          <div class="col-3 ms-5 m-4">
+            <div class="card" style="width: 22rem;">
+              <div class="card-body">
+                <h5 class="card-title text-start">$350/night</h5>
+                <p class="text-muted text-start">0 Reviews</p>
+                <form class="" action="index.html" method="post">
+                  <div class="input-group">
+                    <textarea
+                      class="form-control"
+                      name="booking-message"
+                      placeholder="Send the host a message..."
+                      rows="8"
+                      style="height: 100%;"
+                    ></textarea>
+                  </div>
+                  <div class="col m-3 text-start">
+                    <button class="btn btn-success">
+                      Request Booking
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <!-- *** REQUEST BOOKING END *** -->
           <!-- *** RIGHT SIDE END*** -->
         </div>
       </div>
