--- a/house.html
+++ b/house.html
@@ -144,7 +144,7 @@
             </div>
             <!-- *** HOSTED BY END *** -->
             <div>
-              <p>
+              <p class="text-start">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
                 commodo ligula eget dolor. Aenean massa. Cum sociis natoque
                 penatibus et magnis dis parturient montes, nascetur ridiculus
@@ -184,6 +184,22 @@
             </div>
           </div>
           <!-- *** REQUEST BOOKING END *** -->
+          <!-- *** THANK YOU FOR BOOKING START *** -->
+          <!-- <div class="col-3 ms-5 m-4">
+            <div class="card" style="">
+              <div class="card-body">
+                <h5 class="card-title text-start">$350/night</h5>
+                <p class="text-muted text-start">0 Reviews</p>
+                <div>
+                  <div class="alert alert-success">
+                    <p>Thank you for your enquiry</p>
+                    <span>Sent on 9 september 2022</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
+          <!-- *** THANK YOU FOR BOOKING END *** -->
           <!-- *** RIGHT SIDE END*** -->
         </div>
       </div>
