--- a/profile.html
+++ b/profile.html
@@ -39,10 +39,12 @@
       </div>
     </nav>
     <!-- *** MAIN NAV END *** -->
+
     <div class="container text-center">
       <div class="row">
         <div class="col-4">
           <h1 class="border-bottom">Profile</h1>
+          <!-- *** PROFILE FORM START *** -->
           <form>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label"
@@ -93,6 +95,7 @@
               </button>
             </div>
           </form>
+          <!-- *** PROFILE FORM END *** -->
         </div>
 
         <div class="col-7 offset-1">
@@ -101,6 +104,33 @@
             <button class="btn btn-success">
               List a House
             </button>
+            <!-- *** No HOUSES LISTED START *** -->
+            <div class="m-3 border p-2">
+              <p class="text-center">You dont have any houses listed</p>
+            </div>
+            <!-- *** NO HOUSE LISTED END *** -->
+            <!-- *** WITH HOUSE LISTING START *** -->
+            <div class="card w-100">
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col-3">
+                    1 of 2
+                  </div>
+                  <div class="col-9">
+                    2 of 2
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">
+                        With supporting text below as a natural lead-in to
+                        additional content.
+                      </p>
+                      <a href="#" class="btn btn-primary">Button</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- *** WITH HOUSE LISTING END *** -->
           </div>
         </div>
       </div>
