add listed scenarios

--- a/profile.html
+++ b/profile.html
@@ -110,26 +110,96 @@
             </div>
             <!-- *** NO HOUSE LISTED END *** -->
             <!-- *** WITH HOUSE LISTING START *** -->
-            <div class="card w-100">
+            <!-- <div class="card w-100 my-3">
               <div class="container text-center">
                 <div class="row">
-                  <div class="col-3">
-                    1 of 2
+                  <div class="col-6 p-4">
+                    <img
+                      src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+                      class="card-img-top"
+                      alt="..."
+                    />
                   </div>
-                  <div class="col-9">
-                    2 of 2
+                  <div class="col-6 p-4 text-start">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Villa Ko Samui</h5>
+                      <span class="text-muted">4 Rooms</span>
+                      <span class="card-link card-location text-muted"
+                        >• $350/night</span
+                      >
                       <p class="card-text">
                         With supporting text below as a natural lead-in to
                         additional content.
                       </p>
-                      <a href="#" class="btn btn-primary">Button</a>
+                    </div>
+                    <div class="">
+                      <a href="#" class="btn btn-outline-secondary">Edit </a>
+                      <a href="#" class="btn btn-outline-success">View</a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="card w-100 my-3">
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col-6 p-4">
+                    <img
+                      src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+                      class="card-img-top"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-6 p-4 text-start">
+                    <div class="card-body">
+                      <h5 class="card-title">Villa Ko Samui</h5>
+                      <span class="text-muted">4 Rooms</span>
+                      <span class="card-link card-location text-muted"
+                        >• $350/night</span
+                      >
+                      <p class="card-text">
+                        With supporting text below as a natural lead-in to
+                        additional content.
+                      </p>
+                    </div>
+                    <div class="">
+                      <a href="#" class="btn btn-outline-secondary">Edit </a>
+                      <a href="#" class="btn btn-outline-success">View</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card w-100 my-3">
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col-6 p-4">
+                    <img
+                      src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+                      class="card-img-top"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-6 p-4 text-start">
+                    <div class="card-body">
+                      <h5 class="card-title">Villa Ko Samui</h5>
+                      <span class="text-muted">4 Rooms</span>
+                      <span class="card-link card-location text-muted"
+                        >• $350/night</span
+                      >
+                      <p class="card-text">
+                        With supporting text below as a natural lead-in to
+                        additional content.
+                      </p>
+                    </div>
+                    <div class="">
+                      <a href="#" class="btn btn-outline-secondary">Edit </a>
+                      <a href="#" class="btn btn-outline-success">View</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> -->
             <!-- *** WITH HOUSE LISTING END *** -->
           </div>
         </div>
