removed duplicate bootstrap import #4

--- a/houses.html
+++ b/houses.html
@@ -9,7 +9,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
     <script
       src="https://kit.fontawesome.com/bd0df542dc.js"
@@ -49,7 +48,9 @@
         <div class="row py-3">
           <div class="col">
             <div class="input-group mb-3">
-              <span class="input-group-text">@</span>
+              <span class="input-group-text"
+                ><i class="fa-solid fa-location-dot"></i
+              ></span>
               <select
                 type="select"
                 class="form-control form-select"
@@ -64,7 +65,9 @@
           </div>
           <div class="col">
             <div class="input-group mb-3">
-              <span class="input-group-text">@</span>
+              <span class="input-group-text"
+                ><i class="fa-solid fa-house"></i
+              ></span>
               <select
                 type="select"
                 class="form-control form-select"
@@ -81,7 +84,9 @@
           </div>
           <div class="col">
             <div class="input-group mb-3">
-              <span class="input-group-text">$</span>
+              <span class="input-group-text"
+                ><i class="fa-solid fa-dollar-sign"></i
+              ></span>
               <input
                 name="max-price"
                 type="number"
@@ -92,7 +97,9 @@
           </div>
           <div class="col">
             <div class="input-group mb-3 price-sort-button" name="price-sort">
-              <label class="input-group-text" for="inputGroupSelect01"></label>
+              <label class="input-group-text" for="inputGroupSelect01"
+                ><i class="fa-solid fa-sort"></i
+              ></label>
               <select class="form-select">
                 <option selected value="low">Price (Low to High)</option>
                 <option value="high">Price (high to Low)</option>
@@ -103,7 +110,7 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder="House name"
               name="search-bar"
             />
           </div>
@@ -113,7 +120,6 @@
         </div>
       </div>
     </form>
-
     <!-- *** SEARCH BAR END *** -->
     <!-- *** HOUSE SEARCH RESULTS START*** -->
     <div class="container text-center">
